--- a/writing/writing.css
+++ b/writing/writing.css
@@ -1,4 +1,8 @@
 /* Post List Styles */
+#posts-container {
+    margin-top: var(--spacing-sm);
+}
+
 .list-item {
     margin-bottom: 32px;
     padding-bottom: 32px;
